Backend/AnimalRescue/deployment/manifests/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: #{baseServiceName}#
  labels:
    app: #{baseServiceName}#
spec:
  replicas: 1
  selector:
    matchLabels:
      app: #{baseServiceName}#
  template:
    metadata:
      labels:
        app: #{baseServiceName}#
    spec:
      containers:
        - name: #{baseServiceName}#
          image: #{containerRegistry}#/#{imageRepository}#:#{Build.BuildNumber}#
          resources:
            requests:
              memory: "#{api.memory.request}#"
              cpu: "#{api.cpu.request}#"
            limits:
              memory: "#{api.memory.limit}#"
              cpu: "#{api.cpu.limit}#"
      imagePullSecrets:
        - name: #{imagePullSecret}#
